force-app/main/default/objects/FINS_Document_Value__c/FINS_Document_Value__c.object-meta.xml
<CustomObject>
    <description>IDO: Object to store Client&apos;s documents</description>
    <label>Document Vault</label>
    <nameField>
        <label>Document Vault</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Vault</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>