force-app/main/default/objects/FINS_Document_Value__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Vault</relationshipLabel>
    <relationshipName>Document_Vault</relationshipName>
    <type>Lookup</type>
</CustomField>