force-app/main/default/objects/FINS_Document_Value__c/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <label>Doc Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>