force-app/main/default/objects/FINS_Document_Value__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>