force-app/main/default/objects/FINS_Document_Value__c/listViews/Call_Scripts.listView-meta.xml
<ListView>
    <fullName>Call_Scripts</fullName>
    <columns>NAME</columns>
    <columns>Template__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Doc_Type__c</field>
        <operation>contains</operation>
        <value>Call Scripts</value>
    </filters>
    <label>Call Scripts</label>
</ListView>