force-app/main/default/objects/FINS_Document_Value__c/listViews/Pitch_Prep.listView-meta.xml
<ListView>
    <fullName>Pitch_Prep</fullName>
    <columns>NAME</columns>
    <columns>Template__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Doc_Type__c</field>
        <operation>contains</operation>
        <value>Pitch Prep</value>
    </filters>
    <label>Pitch Prep</label>
</ListView>