force-app/main/default/objects/FINS_Document_Value__c/listViews/Required_Client_Docs.listView-meta.xml
<ListView>
    <fullName>Required_Client_Docs</fullName>
    <columns>NAME</columns>
    <columns>Last_Update__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Doc_Type__c</field>
        <operation>contains</operation>
        <value>Client Doc</value>
    </filters>
    <label>Client Documents</label>
</ListView>